[package]
edition = "2021"
name = "roman-numerals"
description = "Converts numbers to roman numerals and vice versa"
version = "0.1.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ferdinandkeller/roman-numerals-rs"
repository = "https://github.com/ferdinandkeller/roman-numerals-rs"
readme = "README.md"

[dependencies]
