[package]
edition = "2021"
name = "roman-numerals"
description = "Converts numbers to roman numerals and vice versa"
authors = ["Ferdinand Keller <ferdinand.keller@proton.me>"]
version = "0.4.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ferdinandkeller/roman-numerals-rs"
repository = "https://github.com/ferdinandkeller/roman-numerals-rs"
readme = "README.md"

[dependencies]
